src/dts/tests/numbered_keys/numbered_keys.exp
Error: numbered_keys.js:2
  2: var z : string = x["0"];
                      ^^^^^^ number. This type is incompatible with
  2: var z : string = x["0"];
             ^^^^^^ string


Found 1 error
